@@ -1,5 +1,11 @@
 2008-09-21  Carlos Garnacho  <carlos@imendio.com>
 
+	* src/tracker-indexer/modules/evolution.c (get_message_encoding)
+	(get_text_for_mbox): Try to convert message contents to UTF8 based on
+	the charset specified by the Content-Type header.
+
+2008-09-21  Carlos Garnacho  <carlos@imendio.com>
+
 	* src/libtracker-common/tracker-service.c (service_finalize): Plug a
 	leak.
 
